--- a/index.html
+++ b/index.html
@@ -43,11 +43,13 @@
             </tbody>
             <tfoot>
                 <tr>
-                    
+                    <td colspan="2">Totale</td>
                     <td>360</td>
                 </tr>
             </tfoot>
         </table>
+        <hr>
+        <h3>Cose da fare</h3>
     </main>
 </body>
 </html>
