--- a/index.html
+++ b/index.html
@@ -48,8 +48,41 @@
                 </tr>
             </tfoot>
         </table>
-        <hr>
         <h3>Cose da fare</h3>
+        <br>
+        <ul>
+            <li>Visitare la Tower of London&#10007;</li> 
+            <li>Visitare Greenwich &#10004;</li>
+            <li>Ascoltare un artista di strada a Coven Garden &#10004;</li>
+            <li>Mangiare il tipico Fish and Chips inglese&#10007;</li>
+        </ul>
+        <hr>
+        <h3>Info utili:</h3>
+        <ol>
+            <li>Numeri Utili di emergenza</li>
+            <ul>
+                <li><strong>999</strong> - Emergenza</li>
+                <li><strong>101</strong> - Numero polizia</li>
+                <li><strong>111</strong> - Numero assistenza medica</li>
+            </ul>
+            <li>Hotel</li>
+            <ul>
+                <li><strong>Nome hotel</strong>: Buckingham Palace</li>
+                <li><strong>Indirizzo hotel</strong>: Westminster, London SW1A 1AA, Regno Unito</li>
+            </ul>
+            <li>Aereo</li>
+            <ul>
+                <li><strong>Volo di andata</strong>: lorem ipsum</li>
+                <li><strong>Volo di ritorno</strong>: Lorem ipsum</li>
+            </ul>
+        </ol>
     </main>
+    <footer>
+        <hr>
+        <table>
+            <tr><img src="" alt=""></tr>
+            <tr><img src="" alt=""></tr>
+        </table>
+    </footer>
 </body>
 </html>
