--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <!-- Immagini inizio pagina -->
         <h1>Il mio Viaggio a Londra</h1>
         <table>
             <tr><img src="pexels-bill-emrich-230794-0.jpg" alt=""></tr>
@@ -17,6 +18,7 @@
         <hr>
     </header>
     <main>
+        <!-- Serie di liste -->
         <h2>Le mie spese</h2>
         <table>
             <thead>
@@ -78,10 +80,12 @@
         </ol>
     </main>
     <footer>
+        <!-- mmagini a piè di pagina -->
         <hr>
+        <h3>Le foto</h3>
         <table>
-            <tr><img src="" alt=""></tr>
-            <tr><img src="" alt=""></tr>
+            <tr><img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt=""></tr>
+            <tr><img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt=""></tr>
         </table>
     </footer>
 </body>
